2003-05-22  Andrew Lunn  <andrew.lunn@ascom.cd>

        * src/dns.c: (cyg_dns_res_start) New: Allow IPv6 to be used to
	transport queries to the DNS server. This requires a new API
	function to start the client which if protocol family
	independent.
	* tests/dns1.c: Added a test which uses IPv6 as the transport to
	the DNS server.
	* doc/dns.sgml: Documentation of new API function for IPv6.
	* cdl/dns.cdl: Comment that the default DNS server can be an IPv6
	address.

2003-05-14  Mark Salter  <msalter@redhat.com>

	* include/dns_impl.inl: Use strrchr instead of rindex.

2003-04-25  Andrew Lunn  <andrew.lunn@ascom.ch>

	* doc/dns.sgml: Updated to reflect changes for IPv6.

2003-04-24  Andrew Lunn  <andrew.lunn@ascom.ch>

	* include/dns_impl.inl (setdomainname): Append a . to the end of 
	the domainname if it does not have one.
	* cdl/dns.cdl: CYGOPT_NS_DNS_FIRST_FAMILTY to control order of
	results.
	* src/dns.c: Order the results from cyg_dns_getaddrinfo.
	* test/dns1.c: Re-written to perform better testing and for
	getaddrinfo and getnameinfo.
	* test/dns2.c: Removed. It does not add anything useful.

2003-04-21  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/dns.c (cyg_dns_getnameinfo): New. Interface between
	getnameinfo and the DNS client.

2003-04-19  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/dns.c (cyg_dns_getaddrinfo): New. Interface between
	getaddrinfo and the DNS client. This supports both IPv4 and IPv6
	* test/dns1.c: Added tests for getnameinfo using both IPv4 and
	IPv6 addresses.
	
2003-03-03  Jonathan Larmour  <jifl@eCosCentric.com>

	* tests/dns1.c: Use BOOTP info where possible in preference to
	(likely incorrect!) hardcoded info. Use non-Red Hat test
	addresses.

	* tests/dns2.c: Use non-Red Hat test addresses. And don't check
	BOOTP-derived domainname as we don't know what it should be!

2003-02-24  Jonathan Larmour  <jifl@eCosCentric.com>

	* cdl/dns.cdl: Add doc link.

2003-01-22  Jonathan Larmour  <jifl@eCosCentric.com>
